UAT_AllStar_8Jan2024_0636/Backup-Source/objects/Job_Calendar__c.object
<CustomObject>
    <fields>
        <fullName>ApexClass_Name__c</fullName>
        <label>ApexClass Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <label>CompletedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JobItemsProcessed__c</fullName>
        <label>JobItemsProcessed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JobType__c</fullName>
        <label>JobType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Completed_Date__c</fullName>
        <label>Job Completed Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <description>This field contains purpose of the job description</description>
        <label>Job Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Destination__c</fullName>
        <label>Job Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Duration__c</fullName>
        <formula>IF(FLOOR(MOD((CompletedDate__c- CreatedDate__c )* 24, 24 )) &gt; 0,

                 TEXT(FLOOR(MOD((CompletedDate__c- CreatedDate__c )* 24, 24 ))) &amp; &quot; Hours &quot;,&quot;&quot;)

                &amp; TEXT(ROUND(MOD((CompletedDate__c- CreatedDate__c )* 24 * 60, 60 ), 0))

                &amp; &quot; Minutes &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <label>Job Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Run_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Run By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Job_Calendar</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Source__c</fullName>
        <label>Job Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Start_Date__c</fullName>
        <label>Job Start Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Used_For__c</fullName>
        <label>Job Used For</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalJobBatches__c</fullName>
        <label>TotalJobBatches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalJobItems__c</fullName>
        <label>TotalJobItems</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Job Calendar</label>
    <nameField>
        <displayFormat>JC-{0000}</displayFormat>
        <label>Job Calendar No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Calendar</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>